<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
<<<<<<< HEAD
    tools:context=".MainActivity">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/turn_on"
        android:id="@+id/turn_on"
        android:clickable="true"
        android:onClick="on"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/turn_off"
        android:onClick="off"
        android:id="@+id/turn_off"
        android:layout_below="@id/turn_on"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/get_visible"
        android:onClick="visible"
        android:id="@+id/get_visible"
        android:layout_toRightOf="@id/turn_on" />
=======
    tools:context=".MainActivity"
    android:transitionGroup="true">

    <TextView android:text="Bluetooth Example" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textview"
        android:textSize="35dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Tutorials point"
        android:id="@+id/textView"
        android:layout_below="@+id/textview"
        android:layout_centerHorizontal="true"
        android:textColor="#ff7aff24"
        android:textSize="35dp" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:src="@mipmap/ic_launcher"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:theme="@style/Base.TextAppearance.AppCompat" />
>>>>>>> origin/master

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
<<<<<<< HEAD
        android:text="@string/list_devices"
        android:id="@+id/list_devices"
        android:onClick="list"
        android:layout_alignTop="@id/turn_off"
        android:layout_toRightOf="@id/turn_off" />
=======
        android:text="Turn On"
        android:id="@+id/button"
        android:clickable="true"
        android:onClick="on"
        android:layout_alignTop="@+id/button3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
>>>>>>> origin/master

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
<<<<<<< HEAD
        android:text="@string/record"
        android:id="@+id/record"
        android:layout_below="@id/turn_off" />
=======
        android:text="Get visible"
        android:onClick="visible"
        android:id="@+id/button2"
        android:layout_below="@+id/imageView"
        android:layout_centerHorizontal="true" />
>>>>>>> origin/master

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
<<<<<<< HEAD
        android:text="@string/stop"
        android:id="@+id/stop"
        android:layout_toRightOf="@id/record"
        android:layout_below="@id/turn_off" />
=======
        android:text="List devices"
        android:onClick="list"
        android:id="@+id/button3"
        android:layout_below="@+id/imageView"
        android:layout_alignRight="@+id/listView"
        android:layout_alignEnd="@+id/listView" />
>>>>>>> origin/master

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
<<<<<<< HEAD
        android:text="@string/play"
        android:id="@+id/play"
        android:layout_toRightOf="@id/stop"
        android:layout_below="@id/turn_off" />
=======
        android:text="turn off"
        android:onClick="off"
        android:id="@+id/button4"
        android:layout_below="@+id/button"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
>>>>>>> origin/master

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/listView"
        android:layout_alignParentBottom="true"
<<<<<<< HEAD
=======
        android:layout_alignLeft="@+id/button"
        android:layout_alignStart="@+id/button"
>>>>>>> origin/master
        android:layout_below="@+id/textView2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Paired devices:"
        android:id="@+id/textView2"
        android:textColor="#ff34ff06"
        android:textSize="25dp"
<<<<<<< HEAD
        android:layout_below="@+id/record"
=======
        android:layout_below="@+id/button4"
>>>>>>> origin/master
        android:layout_alignLeft="@+id/listView"
        android:layout_alignStart="@+id/listView" />

</RelativeLayout>